# ReelData-Warehouse

./: .gitignore  Makefile  Readme.MD  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
movie_pipeline/: definitions.py  partitions.py
movie_pipeline/assets/: bronze.py  glue_catalog.py  gold_marts.py  gold_snapshots.py  silver_intermediate.py  silver_staging.py
movie_pipeline/checks/: silver_gold_checks.py
movie_pipeline/hooks/: sns_hook.py
movie_pipeline/resources/: glue_resource.py  s3_resource.py  sns_resource.py  spark_resource.py
